kubernetes/kustomize/docsportal/overlays/preprod/helpcenter_internal/ingress-oauth.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    cert-manager.io/private-key-algorithm: RSA
    cert-manager.io/private-key-size: "4096"
    cert-manager.io/private-key-rotation-policy: Always
  labels:
    app.kubernetes.io/instance: helpcenter-internal-oauth
    app.kubernetes.io/managed-by: kustomize
    app.kubernetes.io/name: document-hosting
    argocd.argoproj.io/instance: helpcenter-int
  name: document-hosting-oauth
  namespace: helpcenter-int
spec:
  ingressClassName: nginx
  rules:
  - host: <path:secret/data/docsportal/helpcenter_internal/config#base_url>
    http:
      paths:
      - backend:
          service:
            name: helpcenter-oauth-proxy
            port:
              number: 80
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - <path:secret/data/docsportal/helpcenter_internal/config#base_url>
    secretName: helpcenter-int-oauth
